--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -46,6 +46,7 @@ $fonts-weight: 300;
 $grid-gutter-width-base: 12;
 $grid-gutter-width-sm: 8;
 $grid-gutter-width-xs: 4;
+$header-height: 52px;
 $icons-size-base: 20;
 $icons-size-sm: 17;
 $icons-size-xs: 12;
