--- a/mage_ai/frontend/styles/scss/themes/_base.scss
+++ b/mage_ai/frontend/styles/scss/themes/_base.scss
@@ -48,6 +48,7 @@
   --grid-gutter-width-base: #{$grid-gutter-width-base};
   --grid-gutter-width-sm: #{$grid-gutter-width-sm};
   --grid-gutter-width-xs: #{$grid-gutter-width-xs};
+  --header-height: #{$header-height};
   --icons-size-base: #{$icons-size-base};
   --icons-size-sm: #{$icons-size-sm};
   --icons-size-xs: #{$icons-size-xs};
