--- a/mage_ai/frontend/styles/scss/components/Canvas/Nodes/DraggableAppNode.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Canvas/Nodes/DraggableAppNode.module.scss
@@ -11,13 +11,13 @@
   @include borders.base();
   @include borders.border-colors();
   @include grid.base();
-  @include start-up-status;
 
   backdrop-filter: blur(#{$modal-blur-base});
   background: var(--modal-background-color-base);
   border-radius: (--borders-radius-md);
   box-shadow: 8px 8px 4px 8px var(--modal-box-shadow-base);
   padding: var(--padding-sm);
+  z-index: 10;
 }
 
 .codeContainer {
