--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -79,3 +79,13 @@ $size-xl: xl;
 $size-xxl: xxl;
 $size-xxxl: xxxl;
 $unit: $margin-xs;
+$headline-font-size-1: 64px;
+$headline-font-size-2: 48px;
+$headline-font-size-3: 32px;
+$headline-font-size-4: 24px;
+$headline-font-size-5: 20px;
+$headline-line-height-1: 140%;
+$headline-line-height-2: 140%;
+$headline-line-height-3: 140%;
+$headline-line-height-4: 140%;
+$headline-line-height-5: 140%;
