--- a/mage_ai/frontend/styles/scss/themes/_base.scss
+++ b/mage_ai/frontend/styles/scss/themes/_base.scss
@@ -80,4 +80,14 @@
   --size-xxl: #{$size-xxl};
   --size-xxxl: #{$size-xxxl};
   --unit: #{$unit};
+  --headline-font-size-1: #{$headline-font-size-1};
+  --headline-font-size-2: #{$headline-font-size-2};
+  --headline-font-size-3: #{$headline-font-size-3};
+  --headline-font-size-4: #{$headline-font-size-4};
+  --headline-font-size-5: #{$headline-font-size-5};
+  --headline-line-height-1: #{$headline-line-height-1};
+  --headline-line-height-2: #{$headline-line-height-2};
+  --headline-line-height-3: #{$headline-line-height-3};
+  --headline-line-height-4: #{$headline-line-height-4};
+  --headline-line-height-5: #{$headline-line-height-5};
 }
